# patina-rss

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: bridge-reviewer.md
.claude/skills/build-patina/: SKILL.md
.claude/skills/uniffi-conventions/: SKILL.md
.github/workflows/: benchmarks.yml
Patina/: Package.swift  project.yml
Patina/Patina/: ContentView.swift  Patina-Bridging-Header.h  PatinaApp.swift
Patina/Patina/Components/: BackButton.swift  CommandRow.swift  FeedRows.swift  HeaderButton.swift  KeyboardHintsFooter.swift  ScreenHeader.swift  SwipeableArticleRow.swift  WebView.swift
Patina/Patina/Navigation/: CommandPalette.swift  ImmersiveContainer.swift  NavigationDestination.swift  NavigationRouter.swift
Patina/Patina/Profiling/: PerformanceSignposts.swift
Patina/Patina/Screens/: ArticlesScreen.swift  FeedsScreen.swift  ReaderScreen.swift
Patina/Patina/State/: AppState.swift
Patina/PatinaCoreFFI/: PatinaCoreFFI.c
Patina/PatinaTests/: PerformanceTests.swift
docs/plans/: 2026-02-03-modern-navigation-overhaul.md
patina-core/: Cargo.toml  build.rs  uniffi.toml
patina-core/benches/: db_benchmarks.rs  opml_benchmarks.rs  parser_benchmarks.rs  topic_benchmarks.rs
patina-core/src/: http.rs  lib.rs  patina.udl
patina-core/src/feed/: discovery.rs  http.rs  mod.rs  opml.rs  parser.rs
patina-core/src/serendipity/: mod.rs  patterns.rs  surfacer.rs
patina-core/src/storage/: db.rs  models.rs
patina-core/tests/: integration_test.rs
scripts/: build-rust.sh  bump-version.sh  release.sh
(+110 files in other folders)
